--- a/app/src/main/res/layout/activity_appliances.xml
+++ b/app/src/main/res/layout/activity_appliances.xml
@@ -7,6 +7,16 @@
     tools:context=".appliances">
 
 
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="85dp"
+        android:layout_height="90dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/appliancesicon" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -21,15 +31,15 @@
     <Spinner
         android:id="@+id/spinner_room"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginStart="1dp"
         android:layout_marginLeft="1dp"
         android:layout_marginEnd="1dp"
         android:layout_marginRight="1dp"
-        android:layout_marginBottom="525dp"
-        android:entries="@array/room"
+        android:layout_marginBottom="470dp"
+        android:entries="@array/room_appliance"
         android:spinnerMode="dropdown"
-        android:textSize="60dp"
+        android:textSize="65dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,14 +49,14 @@
     <Spinner
         android:id="@+id/spinner_kitchen_app"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginStart="1dp"
         android:layout_marginLeft="1dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="200dp"
         android:layout_marginEnd="1dp"
         android:layout_marginRight="1dp"
         android:entries="@array/kitchen_appliances"
-        android:textSize="60dp"
+        android:textSize="65dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -56,14 +66,14 @@
     <Spinner
         android:id="@+id/spinner_bathroom_app"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginStart="1dp"
         android:layout_marginLeft="1dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="200dp"
         android:layout_marginEnd="1dp"
         android:layout_marginRight="1dp"
         android:entries="@array/bathroom_appliances"
-        android:textSize="60dp"
+        android:textSize="65dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -73,14 +83,14 @@
     <Spinner
         android:id="@+id/spinner_bedroom_app"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginStart="1dp"
         android:layout_marginLeft="1dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="200dp"
         android:layout_marginEnd="1dp"
         android:layout_marginRight="1dp"
         android:entries="@array/bedroom_appliances"
-        android:textSize="60dp"
+        android:textSize="65dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -93,10 +103,22 @@
         android:layout_height="300dp"
         android:layout_marginStart="1dp"
         android:layout_marginLeft="117dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="20dp"
+        android:background="@android:drawable/alert_light_frame"
         android:hint="Please provide additional details here."
+        android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner_kitchen_app" />
+
+    <Button
+        android:id="@+id/orders"
+        android:layout_width="159dp"
+        android:layout_height="39dp"
+        android:layout_marginBottom="50dp"
+        android:text="Submit"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
