--- a/app/src/main/res/layout/activity_appliances.xml
+++ b/app/src/main/res/layout/activity_appliances.xml
@@ -107,6 +107,7 @@
         android:background="@android:drawable/alert_light_frame"
         android:hint="Please provide additional details here."
         android:visibility="visible"
+        android:maxLength="300"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner_kitchen_app" />
 
@@ -119,6 +120,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/detail_length"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="16dp"
+        android:text="0/300"
+        app:layout_constraintRight_toRightOf="@id/details"
+        app:layout_constraintTop_toBottomOf="@id/details" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
