--- a/app/src/main/res/layout/activity_electrical.xml
+++ b/app/src/main/res/layout/activity_electrical.xml
@@ -6,85 +6,96 @@
     android:layout_height="match_parent"
     tools:context=".electrical">
 
-        <ImageView
-            android:id="@+id/icon"
-            android:layout_width="85dp"
-            android:layout_height="90dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/electrical" />
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="85dp"
+        android:layout_height="90dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/electrical" />
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="34dp"
-            android:text="Electrical"
-            android:textSize="40dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="34dp"
+        android:text="Electrical"
+        android:textSize="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <Spinner
-            android:id="@+id/spinner_room"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="1dp"
-            android:layout_marginLeft="1dp"
-            android:layout_marginEnd="1dp"
-            android:layout_marginRight="1dp"
-            android:layout_marginBottom="470dp"
-            android:entries="@array/room_electrical"
-            android:spinnerMode="dropdown"
-            android:textSize="65dp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent" />
+    <Spinner
+        android:id="@+id/spinner_room"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginLeft="1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginRight="1dp"
+        android:layout_marginBottom="470dp"
+        android:entries="@array/room_electrical"
+        android:spinnerMode="dropdown"
+        android:textSize="65dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <Spinner
-            android:id="@+id/spinner_area_electrical"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="1dp"
-            android:layout_marginLeft="1dp"
-            android:layout_marginTop="200dp"
-            android:layout_marginEnd="1dp"
-            android:layout_marginRight="1dp"
-            android:entries="@array/area_electrical"
-            android:textSize="65dp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
-        <EditText
-            android:id="@+id/details"
-            android:layout_width="400dp"
-            android:layout_height="300dp"
-            android:layout_marginStart="1dp"
-            android:layout_marginLeft="117dp"
-            android:layout_marginTop="20dp"
-            android:background="@android:drawable/alert_light_frame"
-            android:hint="Please provide additional details here."
-            android:visibility="visible"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/spinner_area_electrical" />
-
-        <Button
-            android:id="@+id/orders"
-            android:layout_width="159dp"
-            android:layout_height="39dp"
-            android:layout_marginBottom="50dp"
-            android:text="Submit"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+    <Spinner
+        android:id="@+id/spinner_area_electrical"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginLeft="1dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginRight="1dp"
+        android:entries="@array/area_electrical"
+        android:textSize="65dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <EditText
+        android:id="@+id/details"
+        android:layout_width="400dp"
+        android:layout_height="270dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginLeft="117dp"
+        android:layout_marginTop="20dp"
+        android:background="@android:drawable/alert_light_frame"
+        android:hint="Please provide additional details here."
+        android:inputType="textMultiLine"
+        android:visibility="visible"
+        android:maxLength="300"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/spinner_area_electrical" />
+
+    <Button
+        android:id="@+id/orders"
+        android:layout_width="159dp"
+        android:layout_height="39dp"
+        android:layout_marginBottom="50dp"
+        android:text="Submit"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/detail_length"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="16dp"
+        android:text="0/300"
+        app:layout_constraintRight_toRightOf="@id/details"
+        app:layout_constraintTop_toBottomOf="@id/details" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
